<resources>
    <string name="app_name">My Application</string>

    <!-- notification channel -->
    <string name="default_notification_channel_id">Default</string>
    <string name="default_notification_channel_name">Basic</string>
    <string name="default_notification_channel_description">Default channel for push notifications</string>

    <!-- contend descriptors -->
    <string name="toast_copied_clipboard">Copied to Clipboard</string>
    <string name="content_description_remove_button">Delete Item</string>
    <string name="content_description_share_image">Share Image</string>
    <string name="content_description_success_image">Success</string>

    <!-- splash -->
    <string name="splash_title">Splash</string>

    <!-- create user -->
    <string name="create_user_btn">Create User</string>
    <string name="create_user_title">Create User</string>
    <string name="create_user_account_text">Account</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="error_name_empty">&#160;must not be empty</string>
    <string name="error_name_regex">&#160;must contain only alphabetic characters</string>
    <string name="create_user_success">Created User Successfully</string>

    <!-- view users -->
    <string name="view_users_title">View Users</string>
    <string name="delete_user_title">Delete User</string>
    <string name="delete_user_success">Deleted User Successfully</string>

    <!-- share -->
    <string name="share_title">Share</string>
    <string name="share_btn">Share</string>
    <string name="pick_file_btn">Pick</string>
    <string name="share_image_text">Share Image</string>
    <string name="image_shared_text">Image Shared</string>
    <string name="share_url_empty_toast">Image Url is empty</string>
    <string name="image_url_hint">Image Url</string>

    <!-- location -->
    <string name="location_title">Location</string>
    <string name="last_seen_in">Last seen in</string>
    <string name="coord_lat">Latitude:&#160;</string>
    <string name="coord_lon">, Longitude:&#160;</string>
    <string name="share_location_text">Share Location</string>
    <string name="location_shared_text">Location Shared</string>
    <string name="explain_location_required_title">Location Required</string>
    <string name="explain_location_required_text">In order to retrieve your current location and share it, please allow Location</string>

    <!-- graphics -->
    <string name="graphics_title">Graphics</string>
    <string name="graphics_first_button_text">Polygons</string>
    <string name="graphics_second_button_text">Graphs</string>
    <string name="polygons_title">Polygons</string>
    <string name="graphs_title">Graphs</string>
    <string name="three_d_cube_title">3D cube</string>
    <string name="dance_title">Dance</string>
    <string name="opengl_triangle_title">OpenGL Triangle</string>
    <string name="opengl_ellipse_title">OpenGL Ellipse</string>
    <string name="opengl_pyramid_title">OpenGL Pyramid</string>
    <string name="opengl_cube_title">OpenGL Cube</string>
    <string name="opengl_pentagon_prism_title">OpenGL Pentagon Prism</string>
    <string name="opengl_letter_a_title">OpenGL Letter A</string>
    <string name="opengl_letter_s_title">OpenGL Letter S</string>
    <string name="opengl_letter_v_title">OpenGL Letter V</string>
    <string name="opengl_sphere_title">OpenGL Sphere</string>
    <string name="opengl_half_cone_title">OpenGL Half Cone</string>
    <string name="opengl_imperial_title">OpenGL Imperial</string>
    <string name="opengl_logo_title">OpenGL Logo</string>
    <string name="opengl_logo_diffuse_light_title">OpenGL Logo Diffuse Light</string>
    <string name="opengl_pyramid_with_texture_title">OpenGL Pyramid With Texture</string>
    <string name="opengl_blend_title">OpenGL Cube And Pyramid Blend</string>
    <string name="opengl_stereo_title">OpenGL Stereo View</string>
    <string name="opengl_stereo_imperial_scene_title">OpenGL Stereo Imperial Scene View</string>

    <!-- errors -->
    <string name="error_title">Error</string>
    <string name="error_retrieving_users">An error occurred while retrieving users.</string>
    <string name="error_creating_user">An error occurred while creating the user.</string>
    <string name="error_downloading_resource">An error occurred while downloading the image.</string>
    <string name="error_share_image_activity_resolve">No App found to handle image share.</string>
    <string name="error_share_location_activity_resolve">No App found to handle location share.</string>
    <string name="ok">OK</string>
</resources>
