<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.example.myapplication.ui.SplashFragment"
        android:label="@string/splash_title"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_SplashFragment_to_CreateUserFragment"
            app:destination="@id/CreateUserFragment"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/slide_down"
            app:popExitAnim="@anim/slide_down" />
        <action
            android:id="@+id/action_SplashFragment_to_ViewUsersFragment"
            app:destination="@id/ViewUsersFragment"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/slide_down"
            app:popExitAnim="@anim/slide_down" />
    </fragment>
    <fragment
        android:id="@+id/CreateUserFragment"
        android:name="com.example.myapplication.ui.CreateUserFragment"
        android:label="@string/create_user_title"
        tools:layout="@layout/fragment_create_user" />
    <fragment
        android:id="@+id/ViewUsersFragment"
        android:name="com.example.myapplication.ui.ViewUsersFragment"
        android:label="@string/view_users_title"
        tools:layout="@layout/fragment_view_users">
        <argument
            android:name="isFromNotification"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/ShareFragment"
        android:name="com.example.myapplication.ui.ShareFragment"
        android:label="@string/share_title"
        tools:layout="@layout/fragment_share" />

</navigation>
